[gd_scene load_steps=2 format=3 uid="uid://dsv1fxtw01nff"]

[ext_resource type="Script" uid="uid://e8jr6bvpkxqg" path="res://scripts/scenes/Game.gd" id="1_ibkli"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ibkli")

[node name="UI" type="Control" parent="."]
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1280.0

[node name="EventPopup" type="AcceptDialog" parent="UI"]
size = Vector2i(650, 750)

[node name="VBox" type="VBoxContainer" parent="UI/EventPopup"]
offset_left = 8.0
offset_top = 8.0
offset_right = 642.0
offset_bottom = 701.0
theme_override_constants/separation = 15

[node name="EventTitle" type="Label" parent="UI/EventPopup/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "이벤트 제목"

[node name="EventDescription" type="Label" parent="UI/EventPopup/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "이벤트 내용"

[node name="ChoiceButtons" type="VBoxContainer" parent="UI/EventPopup/VBox"]
layout_mode = 2

[node name="TopBar" type="Control" parent="UI"]
anchors_preset = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 723.0
offset_bottom = 241.0

[node name="YearLabel" type="Label" parent="UI/TopBar"]
layout_mode = 0
offset_left = 343.0
offset_top = 53.0
offset_right = 395.0
offset_bottom = 103.0
theme_override_font_sizes/font_size = 36
text = "0년"

[node name="FaithLabel" type="Label" parent="UI/TopBar"]
layout_mode = 0
offset_left = 78.0
offset_top = 129.0
offset_right = 118.0
offset_bottom = 232.0
theme_override_font_sizes/font_size = 36
text = "0
"

[node name="FoodLabel" type="Label" parent="UI/TopBar"]
layout_mode = 0
offset_left = 355.0
offset_top = 129.0
offset_right = 395.0
offset_bottom = 232.0
theme_override_font_sizes/font_size = 36
text = "0
"

[node name="PopulationLabel" type="Label" parent="UI/TopBar"]
layout_mode = 0
offset_left = 611.0
offset_top = 132.0
offset_right = 651.0
offset_bottom = 235.0
theme_override_font_sizes/font_size = 36
text = "0
"
